* RECENT CHANGES
*******************************************************************************

=== 1.0.3 ===
- Added Window::has_parent() method to check that window is embedded into another window.
- Added Display::enum_monitors() method to query current state of connected monitors.
- Added xrandr library dependency for the X.11-compatible systems.
- Updated window appearance algorithm.
* Updated build scripts.

=== 1.0.2 ===
* Added template get() method for the tk::Registry that allows to obtain widget of specific type.
* Updated key event handling algorithm in the tk::Window class.
* Added FileDialog::Search style for the 'Search' edit control.
* Changed the space allocation algorithm for the edit control (now border gap does not depend
  on border size).
* Renamed public method for prop::String from 'commit' to 'commit_value'.
* Fixed bug that could cause improper window sizing in several cases.

=== 1.0.1 ===
* Updated build scripts.

=== 1.0.0 ===
* Bugfixes for the tk::GraphDot widget.
* Added new Display::wait_events() method for polling display for incoming events.
* Updated rendering of tk::LedMeterChannel widget.
* Fixed NULL dereference when linking styles in the schema.
* Refactoring of widget rendering, allmost all usages of Color::scale_lightness
  replaced with Color::scale_lch_luminance.
* Added 'reduce' options to prop::Allocation property.
* Added 'reduce' options handling by tk::Box and tk::Grid widgets.
* Fixed bug in prop::StringList which could yield to ignore of localization parameters.
* Added support of CIE XYZ D65, CIE LAB D65, CIE LCH D65 and CMYK color schemes for tk::Color property.
* Implemented tk::Schema::add methods for adding custom styles at the initialization stage.
* Fixed bug in clipboard paste for tk::TextDataSink class.
* Updated brightness control for LED channels grouped into LED meters.
* Added border radius support to the tk::Menu widget.
* Fixed prolbem with scrollbar sync for the tk::ListBox widget.

=== 0.5.1 ===