@@ -7,6 +7,7 @@
 - Added Display::enum_monitors() method to query current state of connected monitors.
 - Added xrandr library dependency for the X.11-compatible systems.
 - Updated window appearance algorithm.
+- Added ipadding() property to the tk::Label widget.
 * Updated build scripts.
 
 === 1.0.2 ===
